// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> inject <Text> properties 1`] = `
<Text
  level={3}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 19.2,
      },
      false,
      Object {},
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {currency} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  Eur6.995,12
</Text>
`;

exports[`<Price> when {fixed} (0) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  6.995
</Text>
`;

exports[`<Price> when {fixed} (4) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  6.995,1235
</Text>
`;

exports[`<Price> when {locale} (es-ES) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> when {operator} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  +6.995,12
</Text>
`;

exports[`<Price> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {
        "color": undefined,
        "fontSize": 16,
        "fontWeight": "bold",
      },
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  $6.995,12
</Text>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  6.995,12€
</Text>
`;

exports[`<Price> when {value} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  6.995,12
</Text>
`;
